--- a/index.html
+++ b/index.html
@@ -1,8 +1,27 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<title>Mon Site</title>
+		<meta charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="css/styles.css">
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+	
+	<h1>
+		Hello World
+	</h1>
+	
+	<p>
+		Bienvenue sur mon site.
+	</p>
+
+	<a href="https://google.com/" target="_BLANK">
+		Lien vers google.
+	</a>
+
+	<img src="img/IMG_20200501_191355.jpg" width="50">
+	
 </body>
 </html>
 
