--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
 
 <body>
 	
-	<h1>
-		Hello World
-	</h1>
+	<h2 class="headline">
+		Bienvenue!
+	</h2>
 	
-	<p>
+	<p class="welcome">
 		Bienvenue sur mon site.
+	</p>
+
+	<p class="vivacss">
+		Aujourd'hui c'est le css.
 	</p>
 
 	<a href="https://google.com/" target="_BLANK">
@@ -21,7 +25,7 @@
 	</a>
 
 	<img src="img/IMG_20200501_191355.jpg" width="50">
-	
+
 </body>
 </html>
 
