--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
 </head>
 
 <body>
+
+	<nav class="menu-nav">
+		<ul>
+			<li class="btn">
+				<a href="#">
+					Acceil
+				</a>
+			</li>
+			<li class="btn">
+				<a href="doc/news.html">
+					Actualtités
+				</a>
+			</li>
+			<li class="btn">
+				<a href="doc/contact.html">
+					Contact
+				</a>
+			</li>
+		</ul>
+	</nav>
 	
 	<h2 class="headline">
 		Bienvenue!
