--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 
 <body>
 
+	<!-- Haut de page -->
+
+	<header>
+		<img src="img/ka.jpg" width="100px">
+		<p>
+			Entrez dans l'univers de ...
+		</p>
+	</header>
+
+	<!--Menu de navigation -->
 	<nav class="menu-nav">
 		<ul>
 			<li class="btn">
@@ -27,25 +37,53 @@
 			</li>
 		</ul>
 	</nav>
+
+	<!-- Contenue sous forme de boite -->
+	<div id="content">
+
+		<div class="leftbox">
+			
+			<div class="annonce">
+				<p>
+					Salut
+				</p>
+				<img src="img/ka.jpg" width="100px">
+			</div>
+			
+
+			<div class="annonce">
+				<p>
+					Salut2
+				</p>
+				<img src="img/ka.jpg" width="100px">
+			</div>
+
+			
+			<div class="annonce">
+				<p>
+					Salut3
+				</p>
+				<img src="img/ka.jpg" width="100px">
+			</div>
+
+		</div>
+
+		<div class="rightbox">
+			<h1> Ma derniere Video</h1>
+
+			<iframe width="400" height="400" src="https://www.youtube-nocookie.com/embed/xJppcno29-w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+		</div>
+
+	</div>
+
+	<!-- Pied de Page -->
+	<footer>
+		<p>
+			Copyright &copy; Dariskadic - 2020-2021 - All rights reserved
+		</p>
+	</footer>
 	
-	<h2 class="headline">
-		Bienvenue!
-	</h2>
-	
-	<p class="welcome">
-		Bienvenue sur mon site.
-	</p>
-
-	<p class="vivacss">
-		Aujourd'hui c'est le css.
-	</p>
-
-	<a href="https://google.com/" target="_BLANK">
-		Lien vers google.
-	</a>
-
-	<img src="img/IMG_20200501_191355.jpg" width="50">
 
 </body>
 </html>
-
