--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Mon Site</title>
 		<meta charset="utf-8">
+		<meta name="google-site-verification" content="CfCNytruJpsav51FUAPF5hk10nPf2YSdWidQJdzbxPc" />
 		<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
