--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 		<meta charset="utf-8">
 		<meta name="google-site-verification" content="CfCNytruJpsav51FUAPF5hk10nPf2YSdWidQJdzbxPc" />
 		<link rel="stylesheet" type="text/css" href="css/styles.css">
+		<link rel="icon" 
+      		type="image/png" 
+      		href="favicon.png" />
 </head>
 
 <body>
